--- a/conf/kairosdb.properties
+++ b/conf/kairosdb.properties
@@ -57,6 +57,7 @@ kairosdb.jetty.static_web_root=webroot
 #kairosdb.server.type=ALL
 
 #===============================================================================
+#kairosdb.service.datastore=org.kairosdb.datastore.h2.H2Module
 kairosdb.datastore.concurrentQueryThreads=5
 kairosdb.service.datastore=org.kairosdb.datastore.cassandra.CassandraModule
 #kairosdb.service.datastore=org.kairosdb.datastore.remote.RemoteModule
@@ -68,9 +69,15 @@ kairosdb.datastore.h2.database_path=build/h2db
 
 #===============================================================================
 #Cassandra properties
-#host list is in the form> 1.1.1.1,1.1.1.2
+#host list is in the form> 1.1.1.1:9042,1.1.1.2
+#if the port is omitted it defaults to 9042
 kairosdb.datastore.cassandra.cql_host_list=localhost
 kairosdb.datastore.cassandra.keyspace=kairosdb
+
+#Sets the replication for the keyspace.  This is only used the first time Kairos
+#starts up and needs to create the schema in Cassandra.  Later changes
+#to this property have no effect.
+kairosdb.datastore.cassandra.replication={'class': 'SimpleStrategy','replication_factor' : 1}
 
 #For a single metric query this dictates the number of simultaneous cql queries
 #to run (ie one for each partition key of data).  The larger the cluster the higher you may want
@@ -100,6 +107,9 @@ kairosdb.datastore.cassandra.string_cache_size=50000
 kairosdb.datastore.cassandra.read_consistency_level=ONE
 kairosdb.datastore.cassandra.write_consistency_level=QUORUM
 
+# Set this if this kairosdb node connects to cassandra nodes in multiple datacenters.
+# Not setting this will select cassandra hosts using the RoundRobinPolicy, while setting this will use DCAwareRoundRobinPolicy.
+#kairosdb.datastore.cassandra.local_datacenter=
 
 kairosdb.datastore.cassandra.connections_per_host.local.core=5
 kairosdb.datastore.cassandra.connections_per_host.local.max=100
@@ -115,7 +125,7 @@ kairosdb.datastore.cassandra.max_queue_size=500
 #for cassandra authentication use the following
 #kairosdb.datastore.cassandra.auth.[prop name]=[prop value]
 #example:
-#kairosdb.datastore.cassandra.auth.username=admin
+#kairosdb.datastore.cassandra.auth.user_name=admin
 #kairosdb.datastore.cassandra.auth.password=eat_me
 
 # Set this property to true to enable SSL connections to your C* cluster.
@@ -128,6 +138,20 @@ kairosdb.datastore.cassandra.use_ssl=false
 #TTLs are added to columns as they're inserted so setting this will not affect
 #existing data, only new data.
 #kairosdb.datastore.cassandra.datapoint_ttl=31536000
+
+# Set this property to true to align each datapoint ttl with its timestamp.
+# example: datapoint_ttl is set to 30 days; ingesting a datapoint with timestamp '25 days ago'
+#   - Without this setting, the datapoint will be stored for 30 days from now on, so it can be queried for 30 + 25 days which may not be the intended behaviour using a 30 days ttl
+#   - Setting this property to true will only store this datapoint for 5 days (30 - 25 days).
+# default: false
+# Additional note: consider setting force_default_datapoint_ttl as well for full control
+kairosdb.datastore.cassandra.align_datapoint_ttl_with_timestamp=false
+
+# Set this property to true to force the default datapoint_ttl for all ingested datapoints, effectively ignoring their ttl informations if they provide them.
+# This gives you full control over the timespan the datapoints are stored in K*.
+# default: false
+# Additional note: consider setting align_datapoint_ttl_with_timestamp as well for full control
+kairosdb.datastore.cassandra.force_default_datapoint_ttl=false
 
 #===============================================================================
 # Remote datastore properties
@@ -202,7 +226,6 @@ kairosdb.queries.aggregate_stats=false
 #===============================================================================
 # Health Checks
 kairosdb.service.health=org.kairosdb.core.health.HealthCheckModule
-#kairosdb.service.rollups=org.kairosdb.rollup.RollUpModule
 
 #Response code to return from a call to /api/v1/health/check
 #Some load balancers want 200 instead of 204
@@ -231,10 +254,16 @@ kairosdb.queue_processor.class=org.kairosdb.core.queue.FileQueueProcessor
 kairosdb.queue_processor.batch_size=200
 
 # If the queue doesn't have at least this many items to process the process thread
-# will pause for .5 seconds to wait for more before grabbing data from the queue.
+# will pause for {min_batch_wait} milliseconds to wait for more before grabbing data from the queue.
 # This is an attempt to prevent chatty inserts which can cause extra load on
 # Cassandra
 kairosdb.queue_processor.min_batch_size=100
+
+# If the number of items in the process queue is less than {min_batch_size} the
+# queue processor thread will wait this many milliseconds before flushing the data
+# to C*.  This is to prevent single chatty inserts.  This only has effect when
+# data is trickling in to Kairos.
+kairosdb.queue_processor.min_batch_wait=500
 
 # The size (number of data points) of the memory queue
 # In the case of FileQueueProcessor:
@@ -262,6 +291,23 @@ kairosdb.queue_processor.page_size=52428800
 #CassandraDatastore is the only use of this executor
 kairosdb.ingest_executor.thread_count=10
 
+#===============================================================================
+# Roll-ups
+#kairosdb.service.rollups=org.kairosdb.rollup.RollUpModule
+
+# How often the Roll-up Manager queries for new or updated roll-ups
+#kairosdb.rollups.server_assignment.check_update_delay_millseconds=10000
+#===============================================================================
+
+#===============================================================================
+# Host Manager Service
+
+# How often the host service checks for active hosts
+kairosdb.host_service_manager.check_delay_time_millseconds=60000
+
+# How long before a host is considered inactive
+kairosdb.host_service_manager.inactive_time_seconds=300
+#===============================================================================
 
 #===============================================================================
 #Demo and stress modules
@@ -290,4 +336,3 @@ kairosdb.blast.number_of_rows=1000
 kairosdb.blast.duration_seconds=30
 kairosdb.blast.metric_name=blast_load
 kairosdb.blast.ttl=600
-
